# web-server

./: .dockerignore  .gitignore  .releaserc.cjs  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docker.yml  quality-checks.yml  release.yml  tests.yml
tests/: conftest.py  test_app.py  test_main.py
tests/routers/: test_example.py  test_health.py  test_operation_room.py
tests/services/: test_doctor_service.py  test_scheduler_service.py
tests/utils/: test_logger.py
web_server/: README.md  __main__.py  app.py  models.py  settings.py
web_server/handlers/: example_handler.py  scheduler_handler.py
web_server/routers/: example.py  health.py  operation_room.py
web_server/services/: doctor_service.py  example_service.py  scheduler_service.py
web_server/types/: health.py  operating_room.py
web_server/utils/: logger.py
