[project]
name = "web-server"
version = "0.1.0"
description = "A FastAPI web server"
authors = [
  { name = "Itay Bittan" }
]

dependencies = [
  "fastapi==0.121.1",
  "pydantic_settings==2.12.0",
  "uvicorn==0.38.0",
  "httpx==0.28.1",
  "httpx[http2]==0.28.1",
]

[project.optional-dependencies]
dev = [
  "ruff==0.14.4",
  "mypy==1.18.2",
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==7.0.0",
  "pytest-mock==3.15.1",
]

[tool.setuptools]
packages = ["web_server"]

[build-system]
requires = ["setuptools>=75.8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "settings: Provide custom Settings instance for the test client",
]
